--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,13 +1,11 @@
 use_frameworks!
-
 platform :ios, '10.0'
+
+source 'git@github.com:zhang232425/ZJSpecs.git'
+source 'https://github.com/CocoaPods/Specs.git'
+install! 'cocoapods', :deterministic_uuids => false
 
 target 'ZJLocalAuth_Example' do
   pod 'ZJLocalAuth', :path => '../'
 
-  target 'ZJLocalAuth_Tests' do
-    inherit! :search_paths
-
-    
-  end
 end
